# sidekick

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/sidekick-core/: Cargo.toml
crates/sidekick-core/src/: chat.rs  embed.rs  error.rs  lib.rs  manifest.rs
crates/sidekick-coreml/: Cargo.toml
crates/sidekick-coreml/examples/: ane_check.rs
crates/sidekick-coreml/src/: lib.rs  model.rs
crates/sidekick-embed/: Cargo.toml
crates/sidekick-embed-ffi/: Cargo.toml
crates/sidekick-embed-ffi/examples/: README.md  smoke.c
crates/sidekick-embed-ffi/include/: sidekick.h
crates/sidekick-embed-ffi/src/: lib.rs
crates/sidekick-embed/src/: coreml_embedder.rs  lib.rs  pooling.rs  static_embedder.rs
crates/sidekick-fm/: Cargo.toml  build.rs
crates/sidekick-fm/src/: backend.rs  cache.rs  engine.rs  ffi.rs  lib.rs
crates/sidekick-fm/swift/: bridge.swift
crates/sidekick-server/: Cargo.toml  build.rs
crates/sidekick-server/src/: config.rs  lib.rs  main.rs  pool.rs  state.rs
crates/sidekick-server/src/api/: chat.rs  embeddings.rs  misc.rs  mod.rs  wire.rs
crates/sidekick-server/tests/: api.rs
docs/: DECISIONS.md  INTEGRATING.md  MODELS.md
docs/design/: ane-inference-first-principles.md
examples/manifests/bge-small-en-v1.5/: manifest.toml
examples/manifests/embeddinggemma-300m/: manifest.toml
examples/manifests/f2llm-v2-160m/: manifest.toml
examples/manifests/gte-modernbert-base/: manifest.toml
examples/manifests/lfm2.5-embedding-350m/: manifest.toml
examples/manifests/static-floor/: manifest.toml
tools/: convert_bge_small.py  convert_embeddinggemma.py  convert_gte_modernbert.py  convert_lfm25_embedding.py  convert_qwen3_embedding.py  smoke_lfm25_colbert.py
