[workspace]
resolver = "2"
members = [
    "crates/sidekick-core",
    "crates/sidekick-coreml",
    "crates/sidekick-fm",
    "crates/sidekick-embed",
    "crates/sidekick-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ironblock/sidekick"

[workspace.dependencies]
sidekick-core = { path = "crates/sidekick-core" }
sidekick-coreml = { path = "crates/sidekick-coreml" }
sidekick-fm = { path = "crates/sidekick-fm" }
sidekick-embed = { path = "crates/sidekick-embed" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Pure-Rust regex backend: keeps the build free of C/C++ cross-compilation.
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
safetensors = "0.5"
half = "2"
sha2 = "0.10"
base64 = "0.22"
axum = "0.8"
tower = "0.5"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "thin"
