[package]
name = "sidekick-coreml"
description = "Minimal safe wrapper over Core ML for sidekick (macOS); targets the Apple Neural Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sidekick-core = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSArray",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSString",
    "NSURL",
    "NSValue",
] }
objc2-core-ml = { version = "0.3", default-features = false, features = [
    "std",
    "MLModel",
    "MLModelConfiguration",
    "MLModelDescription",
    "MLFeatureDescription",
    "MLFeatureValue",
    "MLFeatureProvider",
    "MLDictionaryFeatureProvider",
    "MLMultiArray",
    "MLModel_MLModelCompilation",
] }
